smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/namespace-before-shapes.smithy
// A namespace must be defined before a use statement or shapes
string MyString
